--- a/_config.yml
+++ b/_config.yml
@@ -78,4 +78,5 @@ theme: next
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repo: git@github.com:topicfly/topicfly.github.io.git
