--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "deploy": "hexo generate && hexo deploy"
+    "deploy": "hexo clean && hexo generate && hexo deploy"
   },
   "hexo": {
     "version": "3.7.1"
