Add Google Analytics (#4)
* Add google analytics id to the theme config
* Update google analytics code to the one provided by Google Analytics
page
* Move Google Analytics partial rendering to the top of third-party
rendering file

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -367,7 +367,7 @@ disqus:
 #google_site_verification:
 
 # Google Analytics
-#google_analytics:
+google_analytics: UA-122843286-1
 
 # Bing Webmaster tools verification setting
 # See: https://www.bing.com/webmaster/
