[Fix] Wrong generated meta tags (#12)
**Bug**

The generated meta was being cached and displaying the wrong link
preview.

**Fix**

Disable theme cache in the config file

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -8,7 +8,7 @@ override: false
 
 # Allow to cache content generation. Introduced in NexT v6.0.0.
 cache:
-  enable: true
+  enable: false
 
 # ---------------------------------------------------------------
 # Site Information Settings
